# flowl

./: .gitignore  .opencode.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  PLAN.md  README.md  REVIEW.md  TODO.md  build.rs  docker-compose.yml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-release.yml
.opencode/command/: dev-start.md  dev-stop.md
docs/: mqtt-repair-analysis.md
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: dashboard.spec.ts  fixtures.ts  plant-lifecycle.spec.ts
migrations/: 20260214000000_init.sql  20260214100000_plants.sql  20260215100000_add_photo_path.sql  20260215200000_add_last_watered.sql  20260215300000_add_care_events.sql  20260219100000_add_care_info.sql  20260219200000_add_soil_moisture.sql  20260221100000_computed_last_watered.sql  20260225000000_add_user_settings.sql  20260228100000_add_care_event_photo.sql  20260305100000_strict_timestamps.sql  20260310100000_last_watered_view.sql
mockups/: index.html
openspec/: config.yaml
openspec/changes/add-ci-workflow/: tasks.md
openspec/changes/add-i18n/: tasks.md
openspec/changes/add-pwa-pull-to-refresh/: design.md  tasks.md
openspec/changes/add-ui-notification-patterns/: design.md  proposal.md  tasks.md
openspec/changes/backend-error-codes/: design.md  proposal.md  tasks.md
openspec/changes/care-journal-event-grouping/: design.md  tasks.md
openspec/changes/detail-image-lightbox-zoom/: design.md  tasks.md
openspec/changes/frontend-error-mapping/: proposal.md  tasks.md
openspec/changes/import-export/: design.md  proposal.md  tasks.md
openspec/specs/ai-identify/: spec.md
openspec/specs/ai-provider/: spec.md
openspec/specs/ai-summarize/: spec.md
openspec/specs/core-backup/: spec.md
openspec/specs/core-database/: spec.md
openspec/specs/core-foundation/: spec.md
src/: config.rs  db.rs  embedded.rs  images.rs  lib.rs  main.rs  mqtt.rs  server.rs  state.rs
src/ai/: mod.rs  openai.rs  prompts.rs  provider.rs  types.rs
src/api/: ai.rs  backup.rs  care_events.rs  error.rs  locations.rs  mod.rs  mqtt.rs  mqtt_repair.rs  mqtt_status.rs  photos.rs  plants.rs  restore.rs  settings.rs  stats.rs
tests/: ai_chat.rs  ai_identify.rs  ai_plant_context.rs  ai_status.rs  ai_summarize.rs  api_care_events.rs  api_locations.rs  api_photos.rs  api_plants.rs  api_stats.rs  backup_restore.rs  care_events.rs  health.rs  info.rs  locations.rs  mqtt_repair.rs  mqtt_status.rs  photos.rs  plants.rs  settings.rs  stats.rs  ui.rs
tests/common/: mod.rs
ui/: .prettierrc.json  COMPONENT_UNIFICATION_CONCEPT.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
ui/src/: app.html  service-worker.ts
ui/src/lib/: api.ts  (+10 more)
ui/static/: manifest.json  offline.html
(+403 files in other folders)
