[package]
name = "flowl"
version = "0.2.0"
edition = "2024"
description = "Plant care data service for Home Assistant"
readme = "README.md"
authors = ["simplyroba"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/simplyRoba/flowl"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
# Style preferences
must_use_candidate = "allow"
module_name_repetitions = "allow"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
rumqttc = "0.24"
rust-embed = "8"
tower-http = { version = "0.6", features = ["fs", "compression-gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2"
tower = "0.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
