[package]
name = "flowl"
version = "1.5.4"
edition = "2024"
description = "Plant care data service for Home Assistant"
readme = "README.md"
authors = ["simplyroba"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/simplyRoba/flowl"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
# Style preferences
must_use_candidate = "allow"
module_name_repetitions = "allow"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.12", features = ["query"] }
base64 = "0.22"
chrono = "0.4"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rumqttc = "0.25"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
uuid = { version = "1", features = ["v4"] }
zip = { version = "8", default-features = false, features = ["deflate"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.27.0"
